--- a/src/main/resources/com/mousuf/rarestem/sign-up.fxml
+++ b/src/main/resources/com/mousuf/rarestem/sign-up.fxml
@@ -1,14 +1,95 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.mousuf.rarestem.loggingSys.SignUpController"
-            prefHeight="700.0" prefWidth="1280.0">
-
+<AnchorPane prefHeight="700.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mousuf.rarestem.loggingSys.SignUpController">
+   <children>
+      <TextField fx:id="tf_email" alignment="CENTER" layoutX="606.0" layoutY="276.0">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </TextField>
+      <Button fx:id="button_register" layoutX="653.0" layoutY="562.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="80.0" style="-fx-cursor: hand;" text="Register">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Button>
+      <ImageView fitHeight="239.0" fitWidth="239.0" layoutX="531.0" layoutY="37.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@images/rs-prototype-logo-full.png" />
+         </image>
+      </ImageView>
+      <Label layoutX="620.0" layoutY="230.0" text="Sign Up">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </Label>
+      <Label layoutX="555.0" layoutY="281.0" text="Email">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="523.0" layoutY="320.0" text="First name">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <TextField fx:id="tf_surname" alignment="CENTER" layoutX="606.0" layoutY="357.0">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </TextField>
+      <Label layoutX="534.0" layoutY="362.0" text="Surname">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="555.0" layoutY="485.0" text="Email">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="532.0" layoutY="525.0" text="Password">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <RadioButton fx:id="radioButton_technical" layoutX="620.0" layoutY="404.0" mnemonicParsing="false" text="Technical">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </RadioButton>
+      <RadioButton fx:id="radioButton_reseracher" layoutX="620.0" layoutY="440.0" mnemonicParsing="false" text="Researcher">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </RadioButton>
+      <Label layoutX="433.0" layoutY="404.0" text="Area of interes in dataset">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <TextField fx:id="tf_email" alignment="CENTER" layoutX="607.0" layoutY="480.0">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </TextField>
+      <TextField fx:id="tf_password" alignment="CENTER" layoutX="606.0" layoutY="520.0">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </TextField>
+      <TextField fx:id="tf_firstName" alignment="CENTER" layoutX="606.0" layoutY="315.0">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </TextField>
+   </children>
 </AnchorPane>
