--- a/src/main/resources/com/mousuf/rarestem/sign-up.fxml
+++ b/src/main/resources/com/mousuf/rarestem/sign-up.fxml
@@ -11,12 +11,7 @@
 
 <AnchorPane prefHeight="700.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mousuf.rarestem.loggingSys.SignUpController">
    <children>
-      <TextField fx:id="tf_email" alignment="CENTER" layoutX="606.0" layoutY="276.0">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </TextField>
-      <Button fx:id="button_register" layoutX="653.0" layoutY="562.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="80.0" style="-fx-cursor: hand;" text="Register">
+      <Button fx:id="button_register" layoutX="653.0" layoutY="526.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="80.0" style="-fx-cursor: hand;" text="Register">
          <font>
             <Font size="14.0" />
          </font>
@@ -31,65 +26,70 @@
             <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <Label layoutX="555.0" layoutY="281.0" text="Email">
+      <Label layoutX="523.0" layoutY="284.0" text="First name">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Label layoutX="523.0" layoutY="320.0" text="First name">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Label>
-      <TextField fx:id="tf_surname" alignment="CENTER" layoutX="606.0" layoutY="357.0">
+      <TextField fx:id="tf_surname" alignment="CENTER" layoutX="606.0" layoutY="321.0">
          <font>
             <Font size="14.0" />
          </font>
       </TextField>
-      <Label layoutX="534.0" layoutY="362.0" text="Surname">
+      <Label layoutX="534.0" layoutY="326.0" text="Surname">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Label layoutX="555.0" layoutY="485.0" text="Email">
+      <Label layoutX="555.0" layoutY="449.0" text="Email">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Label layoutX="532.0" layoutY="525.0" text="Password">
+      <Label layoutX="532.0" layoutY="489.0" text="Password">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <RadioButton fx:id="radioButton_technical" layoutX="620.0" layoutY="404.0" mnemonicParsing="false" text="Technical">
+      <RadioButton fx:id="radioButton_technical" layoutX="620.0" layoutY="368.0" mnemonicParsing="false" text="Technical">
          <font>
             <Font size="14.0" />
          </font>
       </RadioButton>
-      <RadioButton fx:id="radioButton_reseracher" layoutX="620.0" layoutY="440.0" mnemonicParsing="false" text="Researcher">
+      <RadioButton fx:id="radioButton_researcher" layoutX="620.0" layoutY="404.0" mnemonicParsing="false" text="Researcher">
          <font>
             <Font size="14.0" />
          </font>
       </RadioButton>
-      <Label layoutX="433.0" layoutY="404.0" text="Area of interes in dataset">
+      <Label layoutX="433.0" layoutY="368.0" text="Area of interes in dataset">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <TextField fx:id="tf_email" alignment="CENTER" layoutX="607.0" layoutY="480.0">
+      <TextField fx:id="tf_email" alignment="CENTER" layoutX="607.0" layoutY="444.0">
          <font>
             <Font size="14.0" />
          </font>
       </TextField>
-      <TextField fx:id="tf_password" alignment="CENTER" layoutX="606.0" layoutY="520.0">
+      <TextField fx:id="tf_password" alignment="CENTER" layoutX="606.0" layoutY="484.0">
          <font>
             <Font size="14.0" />
          </font>
       </TextField>
-      <TextField fx:id="tf_firstName" alignment="CENTER" layoutX="606.0" layoutY="315.0">
+      <TextField fx:id="tf_firstName" alignment="CENTER" layoutX="606.0" layoutY="279.0">
          <font>
             <Font size="14.0" />
          </font>
       </TextField>
+      <Button fx:id="button_login" layoutX="665.0" layoutY="611.0" mnemonicParsing="false" style="-fx-background-color: transparent;" text="Log In" textFill="#1347b9" underline="true">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Button>
+      <Label layoutX="634.0" layoutY="591.0" prefWidth="119.0" text="Already signed up?">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
