UPDATED: FXML file path and MongoDB data retrival resolved. ERR: None. - MCZ - 04-05-22

--- a/src/main/resources/com/mousuf/rarestem/sign-up.fxml
+++ b/src/main/resources/com/mousuf/rarestem/sign-up.fxml
@@ -81,7 +81,7 @@
             <Font size="14.0" />
          </font>
       </TextField>
-      <Button fx:id="button_login" layoutX="665.0" layoutY="611.0" mnemonicParsing="false" style="-fx-background-color: transparent;" text="Log In" textFill="#1347b9" underline="true">
+      <Button fx:id="button_login" layoutX="665.0" layoutY="611.0" mnemonicParsing="false" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Log In" textFill="#1347b9" underline="true">
          <font>
             <Font size="14.0" />
          </font>
