--- a/src/main/resources/com/mousuf/rarestem/logged-in.fxml
+++ b/src/main/resources/com/mousuf/rarestem/logged-in.fxml
@@ -2,9 +2,12 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
@@ -18,7 +21,7 @@
                   <Image url="@images/rs-prototype-logo-full.png" />
                </image>
             </ImageView>
-            <Label fx:id="label_loggedInName" layoutX="42.0" layoutY="198.0" text="Mousuf C Zaman" textAlignment="CENTER">
+            <Label fx:id="label_loggedInName" layoutX="42.0" layoutY="198.0" prefHeight="25.0" prefWidth="128.0" textAlignment="CENTER">
                <font>
                   <Font size="16.0" />
                </font>
@@ -27,8 +30,39 @@
             <Button fx:id="button_myActivity" layoutX="57.0" layoutY="270.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="90.0" style="-fx-background-color: transparent; -fx-cursor: hand;" text="My Activity" underline="true" />
             <Button fx:id="button_viewDatasets" layoutX="57.0" layoutY="302.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="90.0" style="-fx-background-color: transparent; -fx-cursor: hand;" text="View Datasets" underline="true" />
             <Button fx:id="button_exit" layoutX="117.0" layoutY="656.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="38.0" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Exit" underline="true" />
+            <Button fx:id="button_addProject" layoutX="57.0" layoutY="332.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="90.0" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Add Project" underline="true" />
          </children>
       </AnchorPane>
-      <AnchorPane prefHeight="700.0" prefWidth="1049.0" />
+      <AnchorPane prefHeight="700.0" prefWidth="1049.0">
+         <children>
+            <BorderPane layoutX="1.0" prefHeight="700.0" prefWidth="1070.0">
+               <center>
+                  <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                     <children>
+                        <TableView layoutX="129.0" layoutY="26.0" prefHeight="399.0" prefWidth="833.0">
+                          <columns>
+                              <TableColumn fx:id="tc_projectName" prefWidth="166.0" text="Project Name" />
+                              <TableColumn fx:id="tc_projectDesc" prefWidth="396.0" text="Project Description" />
+                              <TableColumn fx:id="tc_projectOwner" minWidth="0.0" prefWidth="125.0" text="Project Owner" />
+                              <TableColumn fx:id="tc_projectURL" minWidth="0.0" prefWidth="145.0" text="Project URL" />
+                          </columns>
+                        </TableView>
+                     </children>
+                  </AnchorPane>
+               </center>
+               <top>
+                  <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                     <children>
+                        <Label layoutX="478.0" layoutY="71.0" prefHeight="27.0" prefWidth="115.0" text="User Projects">
+                           <font>
+                              <Font name="System Bold" size="18.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="432.0" layoutY="109.0" text="Check out our user project repositories" />
+                     </children>
+                  </AnchorPane>
+               </top>
+            </BorderPane>
+         </children></AnchorPane>
    </children>
 </HBox>
