--- a/src/main/resources/com/mousuf/rarestem/log-in.fxml
+++ b/src/main/resources/com/mousuf/rarestem/log-in.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<HBox xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mousuf.rarestem.loggingSys.LogInController">
+<HBox xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mousuf.rarestem.loggingSys.logIn.LogInController">
    <children>
       <AnchorPane prefHeight="700.0" prefWidth="1280.0">
           <children>
