--- a/src/main/resources/com/mousuf/rarestem/table-view-sample-test.fxml
+++ b/src/main/resources/com/mousuf/rarestem/table-view-sample-test.fxml
@@ -4,7 +4,10 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="587.0" prefWidth="762.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mousuf.rarestem.tableViewTest.dbTableView.DBTableViewController">
+<AnchorPane prefHeight="587.0" prefWidth="762.0"
+            xmlns="http://javafx.com/javafx/19"
+            xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="com.mousuf.rarestem.projContributionSys.userContrib.UserContribController">
    <children>
       <TableView fx:id="table" layoutX="162.0" layoutY="84.0" prefHeight="341.0" prefWidth="459.0">
         <columns>
