--- a/src/main/resources/com/mousuf/rarestem/user-contributions.fxml
+++ b/src/main/resources/com/mousuf/rarestem/user-contributions.fxml
@@ -11,8 +11,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="com.mousuf.rarestem.projContributionSys.getContrib.GetContribController">
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mousuf.rarestem.projContributionSys.userContrib.UserContribController">
    <children>
       <AnchorPane prefHeight="700.0" prefWidth="218.0" style="-fx-background-color: #ffffff;">
          <children>
@@ -42,9 +41,9 @@
                      <children>
                         <TableView fx:id="tableContrib" layoutX="129.0" layoutY="26.0" prefHeight="399.0" prefWidth="833.0">
                           <columns>
-                              <TableColumn fx:id="tc_projectName" prefWidth="166.0" text="Project Name" />
-                              <TableColumn fx:id="tc_projectDesc" prefWidth="396.0" text="Project Description" />
-                              <TableColumn fx:id="tc_projectOwner" minWidth="0.0" prefWidth="125.0" text="Project Owner" />
+                              <TableColumn fx:id="fn" prefWidth="166.0" text="Project Name" />
+                              <TableColumn fx:id="ln" prefWidth="396.0" text="Project Description" />
+                              <TableColumn fx:id="o" minWidth="0.0" prefWidth="125.0" text="Project Owner" />
                               <TableColumn fx:id="tc_projectURL" minWidth="0.0" prefWidth="145.0" text="Project URL" />
                           </columns>
                         </TableView>
