--- a/src/main/resources/com/mousuf/rarestem/logged-in.fxml
+++ b/src/main/resources/com/mousuf/rarestem/logged-in.fxml
@@ -2,8 +2,6 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -15,7 +13,7 @@
    <children>
       <AnchorPane prefHeight="700.0" prefWidth="218.0" style="-fx-background-color: #ffffff;">
          <children>
-            <Button fx:id="button_myProfile" layoutX="57.0" layoutY="237.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="90.0" style="-fx-background-color: transparent; -fx-cursor: hand;" text="My Profile" underline="true" />
+            <Button fx:id="button_home" layoutX="57.0" layoutY="237.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="90.0" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Home" underline="true" />
             <ImageView fitHeight="145.0" fitWidth="156.0" layoutX="30.0" layoutY="44.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@images/rs-prototype-logo-full.png" />
@@ -27,7 +25,7 @@
                </font>
             </Label>
             <Button fx:id="button_logOut" layoutX="43.0" layoutY="656.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="60.0" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Log Out" underline="true" />
-            <Button fx:id="button_myActivity" layoutX="57.0" layoutY="270.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="90.0" style="-fx-background-color: transparent; -fx-cursor: hand;" text="My Activity" underline="true" />
+            <Button fx:id="button_userProjects" layoutX="57.0" layoutY="270.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="90.0" style="-fx-background-color: transparent; -fx-cursor: hand;" text="User Projects" underline="true" />
             <Button fx:id="button_viewDatasets" layoutX="57.0" layoutY="302.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="90.0" style="-fx-background-color: transparent; -fx-cursor: hand;" text="View Datasets" underline="true" />
             <Button fx:id="button_exit" layoutX="117.0" layoutY="656.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="38.0" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Exit" underline="true" />
             <Button fx:id="button_addProject" layoutX="57.0" layoutY="332.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="90.0" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Add Project" underline="true" />
@@ -37,18 +35,7 @@
          <children>
             <BorderPane layoutX="1.0" prefHeight="700.0" prefWidth="1070.0">
                <center>
-                  <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-                     <children>
-                        <TableView fx:id="tableContrib" layoutX="129.0" layoutY="26.0" prefHeight="399.0" prefWidth="833.0">
-                          <columns>
-                              <TableColumn fx:id="tc_projectName" prefWidth="166.0" text="Project Name" />
-                              <TableColumn fx:id="tc_projectDesc" prefWidth="396.0" text="Project Description" />
-                              <TableColumn fx:id="tc_projectOwner" minWidth="0.0" prefWidth="125.0" text="Project Owner" />
-                              <TableColumn fx:id="tc_projectURL" minWidth="0.0" prefWidth="145.0" text="Project URL" />
-                          </columns>
-                        </TableView>
-                     </children>
-                  </AnchorPane>
+                  <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
                </center>
                <top>
                   <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
