--- a/src/main/resources/com/mousuf/rarestem/proj-contrib.fxml
+++ b/src/main/resources/com/mousuf/rarestem/proj-contrib.fxml
@@ -25,8 +25,8 @@
                         <Font size="16.0" />
                     </font>
                 </Label>
-                <Button fx:id="button_myProfile" layoutX="57.0" layoutY="237.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="90.0" style="-fx-background-color: transparent; -fx-cursor: hand;" text="My Profile" underline="true" />
-                <Button fx:id="button_myActivity" layoutX="57.0" layoutY="270.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="90.0" style="-fx-background-color: transparent; -fx-cursor: hand;" text="My Activity" underline="true" />
+                <Button fx:id="button_home" layoutX="57.0" layoutY="237.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="90.0" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Home" underline="true" />
+                <Button fx:id="button_userProjects" layoutX="57.0" layoutY="270.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="90.0" style="-fx-background-color: transparent; -fx-cursor: hand;" text="User Projects" underline="true" />
                 <Button fx:id="button_viewDatasets" layoutX="57.0" layoutY="302.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="90.0" style="-fx-background-color: transparent; -fx-cursor: hand;" text="View Datasets" underline="true" />
                 <Button fx:id="button_addProject" layoutX="57.0" layoutY="332.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="90.0" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Add Project" underline="true" />
                 <Button fx:id="button_exit" layoutX="117.0" layoutY="656.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="38.0" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Exit" underline="true" />
@@ -39,7 +39,7 @@
                <top>
                   <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                      <children>
-                        <Label alignment="TOP_CENTER" layoutX="481.0" layoutY="73.0" text="Add Project" textAlignment="CENTER">
+                        <Label alignment="TOP_CENTER" layoutX="481.0" layoutY="100.0" text="Add Project" textAlignment="CENTER">
                            <opaqueInsets>
                               <Insets />
                            </opaqueInsets>
@@ -47,7 +47,7 @@
                               <Font name="System Bold" size="18.0" />
                            </font>
                         </Label>
-                        <Label alignment="TOP_CENTER" layoutX="293.0" layoutY="100.0" prefHeight="25.0" prefWidth="477.0" text="Our community of computer scientist use our datasets for various uses. Add your project." textAlignment="JUSTIFY">
+                        <Label alignment="TOP_CENTER" layoutX="200.0" layoutY="135.0" prefHeight="25.0" prefWidth="663.0" text="Our community of computer scientist use our datasets for various uses. Add your project and ask the community for help." textAlignment="JUSTIFY">
                            <opaqueInsets>
                               <Insets />
                            </opaqueInsets>
@@ -73,12 +73,12 @@
                               <Font size="14.0" />
                            </font>
                         </Label>
-                        <Label layoutX="284.0" layoutY="141.0" text="Short Decription">
+                        <Label layoutX="164.0" layoutY="142.0" text="Short Description and required help">
                            <font>
                               <Font size="14.0" />
                            </font>
                         </Label>
-                        <Label layoutX="318.0" layoutY="177.0" text="Project URL">
+                        <Label layoutX="314.0" layoutY="177.0" text="Project URL">
                            <font>
                               <Font size="14.0" />
                            </font>
