--- a/src/main/resources/com/mousuf/rarestem/user-contributions.fxml
+++ b/src/main/resources/com/mousuf/rarestem/user-contributions.fxml
@@ -15,22 +15,17 @@
    <children>
       <AnchorPane prefHeight="700.0" prefWidth="218.0" style="-fx-background-color: #ffffff;">
          <children>
-            <Button fx:id="button_myProfile" layoutX="57.0" layoutY="237.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="90.0" style="-fx-background-color: transparent; -fx-cursor: hand;" text="My Profile" underline="true" />
+            <Button fx:id="button_home" layoutX="57.0" layoutY="237.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="90.0" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Home" underline="true" />
             <ImageView fitHeight="145.0" fitWidth="156.0" layoutX="30.0" layoutY="44.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@images/rs-prototype-logo-full.png" />
                </image>
             </ImageView>
-            <Label fx:id="label_loggedInName" layoutX="42.0" layoutY="198.0" prefHeight="25.0" prefWidth="128.0" textAlignment="CENTER">
-               <font>
-                  <Font size="16.0" />
-               </font>
-            </Label>
-            <Button fx:id="button_logOut" layoutX="43.0" layoutY="656.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="60.0" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Log Out" underline="true" />
-            <Button fx:id="button_myActivity" layoutX="57.0" layoutY="270.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="90.0" style="-fx-background-color: transparent; -fx-cursor: hand;" text="My Activity" underline="true" />
+            <Button fx:id="button_userProjects" layoutX="57.0" layoutY="270.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="90.0" style="-fx-background-color: transparent; -fx-cursor: hand;" text="User Projects" underline="true" />
             <Button fx:id="button_viewDatasets" layoutX="57.0" layoutY="302.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="90.0" style="-fx-background-color: transparent; -fx-cursor: hand;" text="View Datasets" underline="true" />
-            <Button fx:id="button_exit" layoutX="117.0" layoutY="656.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="38.0" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Exit" underline="true" />
             <Button fx:id="button_addProject" layoutX="57.0" layoutY="332.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="90.0" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Add Project" underline="true" />
+            <Button fx:id="button_exit" layoutX="117.0" layoutY="656.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="38.0" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Exit" underline="true" />
+            <Button fx:id="button_logOut" layoutX="43.0" layoutY="656.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="60.0" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Log Out" underline="true" />
          </children>
       </AnchorPane>
       <AnchorPane prefHeight="700.0" prefWidth="1049.0">
@@ -39,12 +34,12 @@
                <center>
                   <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                      <children>
-                        <TableView fx:id="tableContrib" layoutX="129.0" layoutY="26.0" prefHeight="399.0" prefWidth="833.0">
+                        <TableView fx:id="tableContrib" layoutX="61.0" layoutY="26.0" prefHeight="399.0" prefWidth="960.0">
                           <columns>
-                              <TableColumn fx:id="fn" prefWidth="166.0" text="Project Name" />
-                              <TableColumn fx:id="ln" prefWidth="396.0" text="Project Description" />
-                              <TableColumn fx:id="o" minWidth="0.0" prefWidth="125.0" text="Project Owner" />
-                              <TableColumn fx:id="tc_projectURL" minWidth="0.0" prefWidth="145.0" text="Project URL" />
+                              <TableColumn fx:id="col_projectName" prefWidth="151.0" text="Project Name" />
+                              <TableColumn fx:id="col_projectOwner" prefWidth="138.0" text="Project Owner" />
+                              <TableColumn fx:id="col_projectDesc" minWidth="0.0" prefWidth="524.0" text="Project Description" />
+                              <TableColumn fx:id="col_projectGetInTouch" minWidth="0.0" prefWidth="146.0" text="Get in touch" />
                           </columns>
                         </TableView>
                      </children>
@@ -58,7 +53,7 @@
                               <Font name="System Bold" size="18.0" />
                            </font>
                         </Label>
-                        <Label layoutX="432.0" layoutY="109.0" text="Check out our user project repositories" />
+                        <Label layoutX="279.0" layoutY="112.0" prefHeight="17.0" prefWidth="512.0" text="Check out our user project repositories. Feel free to contact the project owners if you can help." />
                      </children>
                   </AnchorPane>
                </top>
