--- a/src/main/resources/com/mousuf/rarestem/viewCOL1A2.fxml
+++ b/src/main/resources/com/mousuf/rarestem/viewCOL1A2.fxml
@@ -1,14 +1,66 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.mousuf.rarestem.ViewCOL1A2"
-            prefHeight="400.0" prefWidth="600.0">
-
-</AnchorPane>
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mousuf.rarestem.dataset.col1a2.COL1A2Controller">
+    <children>
+        <AnchorPane prefHeight="700.0" prefWidth="218.0" style="-fx-background-color: #ffffff;">
+            <children>
+                <Button fx:id="button_home" layoutX="57.0" layoutY="237.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="90.0" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Home" underline="true" />
+                <ImageView fitHeight="145.0" fitWidth="156.0" layoutX="30.0" layoutY="44.0" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="@images/rs-prototype-logo-full.png" />
+                    </image>
+                </ImageView>
+                <Button fx:id="button_userProjects" layoutX="57.0" layoutY="270.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="90.0" style="-fx-background-color: transparent; -fx-cursor: hand;" text="User Projects" underline="true" />
+                <Button fx:id="button_viewDatasets" layoutX="57.0" layoutY="302.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="90.0" style="-fx-background-color: transparent; -fx-cursor: hand;" text="View Datasets" underline="true" />
+                <Button fx:id="button_addProject" layoutX="57.0" layoutY="332.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="90.0" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Add Project" underline="true" />
+                <Button fx:id="button_exit" layoutX="117.0" layoutY="656.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="38.0" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Exit" underline="true" />
+                <Button fx:id="button_logOut" layoutX="43.0" layoutY="656.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="60.0" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Log Out" underline="true" />
+            </children>
+        </AnchorPane>
+        <AnchorPane prefHeight="700.0" prefWidth="1049.0">
+            <children>
+                <BorderPane layoutX="1.0" prefHeight="700.0" prefWidth="1070.0">
+                    <center>
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                            <children>
+                                <TableView fx:id="tableCOL1A2" layoutX="21.0" layoutY="26.0" prefHeight="399.0" prefWidth="1027.0">
+                                    <columns>
+                                        <TableColumn fx:id="col_variants_on_genome_id" prefWidth="161.0" text="variants_on_genome_id" />
+                                        <TableColumn fx:id="col_allele" prefWidth="63.0" text="allele" />
+                                        <TableColumn fx:id="col_effect_id" minWidth="0.0" prefWidth="77.0" text="effect_id" />
+                                        <TableColumn fx:id="col_position_g_start" minWidth="0.0" prefWidth="116.0" text="position_g_start" />
+                                        <TableColumn fx:id="col_position_g_end" prefWidth="124.0" text="position_g_end" />
+                                        <TableColumn fx:id="col_average_frequency" minWidth="0.0" prefWidth="137.0" text="average_frequency" />
+                                        <TableColumn fx:id="col_variantOnGenome_DBID" prefWidth="178.0" text="VariantOnGenome_DBID" />
+                                        <TableColumn fx:id="col_variantOnGenome_DNA" prefWidth="170.0" text="VariantOnGenome_DNA" />
+                                    </columns>
+                                </TableView>
+                            </children>
+                        </AnchorPane>
+                    </center>
+                    <top>
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                            <children>
+                                <Label layoutX="463.0" layoutY="73.0" prefHeight="27.0" prefWidth="145.0" text="COL1A2 Dataset">
+                                    <font>
+                                        <Font name="System Bold" size="18.0" />
+                                    </font>
+                                </Label>
+                            </children>
+                        </AnchorPane>
+                    </top>
+                </BorderPane>
+            </children></AnchorPane>
+    </children>
+</HBox>
