--- a/src/main/resources/com/mousuf/rarestem/dataset.fxml
+++ b/src/main/resources/com/mousuf/rarestem/dataset.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mousuf.rarestem.dataset.dataset.DatasetController">
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mousuf.rarestem.datasetSys.datasetController.DatasetController">
     <children>
         <AnchorPane prefHeight="700.0" prefWidth="218.0" style="-fx-background-color: #ffffff;">
             <children>
@@ -43,11 +43,6 @@
                            </font>
                         </Button>
                         <Button fx:id="button_viewCOL1A2" layoutX="286.0" layoutY="110.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="98.0" style="-fx-background-color: transparent; -fx-cursor: hand;" text="View COL1A2" underline="true">
-                           <font>
-                              <Font name="System Bold" size="12.0" />
-                           </font>
-                        </Button>
-                        <Button fx:id="button_viewFBN1" layoutX="287.0" layoutY="145.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="82.0" style="-fx-background-color: transparent; -fx-cursor: hand;" text="View FBN1" underline="true">
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font>
