--- a/src/main/resources/com/mousuf/rarestem/viewCOL1A2.fxml
+++ b/src/main/resources/com/mousuf/rarestem/viewCOL1A2.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mousuf.rarestem.dataset.col1a2.COL1A2Controller">
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mousuf.rarestem.datasetSys.col1a2.COL1A2Controller">
     <children>
         <AnchorPane prefHeight="700.0" prefWidth="218.0" style="-fx-background-color: #ffffff;">
             <children>
@@ -36,9 +36,9 @@
                             <children>
                                 <TableView fx:id="tableCOL1A2" layoutX="21.0" layoutY="26.0" prefHeight="399.0" prefWidth="1027.0">
                                     <columns>
-                                        <TableColumn fx:id="col_variants_on_genome_id" prefWidth="161.0" text="variants_on_genome_id" />
-                                        <TableColumn fx:id="col_allele" prefWidth="63.0" text="allele" />
-                                        <TableColumn fx:id="col_effect_id" minWidth="0.0" prefWidth="77.0" text="effect_id" />
+                                        <TableColumn fx:id="col_variants_on_genome_id" prefWidth="150.4000244140625" text="variants_on_genome_id" />
+                                        <TableColumn fx:id="col_chromosome" prefWidth="83.20001220703125" text="chromosome" />
+                                        <TableColumn fx:id="col_effect_id" minWidth="0.0" prefWidth="68.800048828125" text="effect_id" />
                                         <TableColumn fx:id="col_position_g_start" minWidth="0.0" prefWidth="116.0" text="position_g_start" />
                                         <TableColumn fx:id="col_position_g_end" prefWidth="124.0" text="position_g_end" />
                                         <TableColumn fx:id="col_average_frequency" minWidth="0.0" prefWidth="137.0" text="average_frequency" />
